# workspace

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  alembic.sh  docker-compose.dev.yaml  docker-compose.tests.yaml  docker-compose.yaml  justfile  openapi.json  openapi.yaml  pyproject.toml  tests.Dockerfile
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: deploy.yaml  test.yaml
aibolit_app/: __init__.py  __main__.py  conf.py  logging.py  main.py  settings.py  settings.yml
aibolit_app/api/: depends.py
aibolit_app/api/middlewares/: logging_middleware.py
aibolit_app/api/schemas/schedules/: __init__.py  generated.py  schema.py
aibolit_app/api/transports/views/common/: views.py
aibolit_app/api/transports/views/schedules/: views.py
aibolit_app/db/: __init__.py  developers.py  mixins.py  schedules.py
aibolit_app/db/alembic/: env.py
aibolit_app/db/alembic/versions/: 1549ae7603c8_datetime_with_timezone.py  34240cbe3168_create_schedule.py  a4fb97723d07_deleted_old_field_duration_and_added_.py  cfea4ef0043a_change_user_id_to_bigint.py
aibolit_app/grpc/: __int__.py  depends.py  main.py  server.py
aibolit_app/grpc/interceptors/: logging_interceptor.py
aibolit_app/grpc/servicers/: schedule_servicer.py
aibolit_app/integrations/: schedules_repo.py
aibolit_app/services/: schedules_service.py
api/: __init__.py  __main__.py  conf.py  deps.py  filter_logging.py  main.py  manager.py  utils.py
api/conf/: logging.yaml
api/db/: __init__.py  developers.py  mixins.py  schedule.py
api/db/alembic/: env.py  script.py.mako
api/db/alembic/versions/: 34240cbe3168_create_schedule.py  85cde8301fda_treatment_duration_may_be_constantly.py  cfea4ef0043a_change_user_id_to_bigint.py  e9baf9389777_create_schedule.py
api/gRPC/: server.py
api/gRPC/interceptors/: logging_interceptor.py
api/gRPC/servicers/: schedule_server.py  schedule_servicer.py
api/grpc/servicers/: schedule_server.py
api/middlewares/: logging_middleware.py
api/modules/schedule/: __init__.py  manager.py  schema.py  utils.py
api/modules/users/: user_scheme.py
db_homework/: db_homework.txt  main.ipynb
diagrams/: ERD.drawio  class-diagram.drawio
project/: alembic.ini
project/api/: __init__.py  conf.py  schemas.py  settings.py
project/api/db/:  schedule.py  mixins.py
project/api/db/alembic/: env.py
protos/: schedule.proto
src/: __init__.py  conf.py  logging.py  settings.py
src/api/: depends.py
src/api/endpoints/: schedule.py
src/api/routers/: trace_router.py
src/api/schemas/: generated.py  schedule_schema.py  schema.py
src/api/schemas/schedules/: __init__.py  generated.py  schema.py
src/api/transports/views/schedules/: views.py
src/db/: __init__.py  developers.py  schedules.py
src/db/alembic/: env.py
src/db/alembic/versions/: 1549ae7603c8_datetime_with_timezone.py  a4fb97723d07_deleted_old_field_duration_and_added_.py
src/grpc/: __int__.py  depends.py  server.py
src/grpc/injections/: schedule_inject.py
src/grpc/interceptors/: logging_interceptor.py
src/grpc/servicers/: schedule_servicer.py
src/integrations/: schedules_repo.py
src/modules/schedule/: __init__.py  manager.py
src/modules/users/: user_scheme.py
src/repositories/: schedule_repository.py
src/services/: schedule_service.py  schedules_service.py
tests/: conftest.py  test_api.py  test_grpc.py  test_schedule.py  utils.py
